Remove summary update code