@@ -3,10 +3,6 @@ package personal.finance.tracking.summary.application;
 import lombok.RequiredArgsConstructor;
 import personal.finance.common.UseCase;
 import personal.finance.common.events.EventPublisher;
-import personal.finance.tracking.asset.domain.Asset;
-import personal.finance.tracking.asset.domain.AssetId;
-import personal.finance.tracking.asset.domain.Item;
-import personal.finance.tracking.asset.domain.ItemId;
 import personal.finance.tracking.summary.domain.Money;
 import personal.finance.tracking.summary.domain.Summary;
 import personal.finance.tracking.summary.domain.SummaryId;
@@ -17,10 +13,8 @@ import personal.finance.tracking.summary.domain.events.SummaryCreated;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 class CreateNewSummaryUseCase implements UseCase<Summary> {
@@ -37,22 +31,18 @@ class CreateNewSummaryUseCase implements UseCase<Summary> {
         SummaryId summaryId = SummaryId.random();
 
         if (!confirmedSummaries.isEmpty()) {
-            Summary lastConfirmed = confirmedSummaries.get(0);
-            List<Asset> lastConfirmedAssets = lastConfirmed.getAssets();
-            List<Asset> newAssets = getNewAssets(lastConfirmedAssets);
+            Summary lastConfirmed = confirmedSummaries.getFirst();
 
             Summary summary = new Summary(
                 summaryId,
                 userId,
-                new Money(calculateMoneyValue(lastConfirmedAssets), lastConfirmed.getMoney().getCurrency()),
+                lastConfirmed.getMoney(),
                 LocalDateTime.now(),
-                SummaryState.DRAFT,
-                newAssets,
-                newAssets.stream().map(Asset::getIdValue).collect(Collectors.toSet())
-            );
+                SummaryState.DRAFT);
 
             Summary newSummary = summaryRepository.save(summary);
-            eventPublisher.publishEvent(new SummaryCreated(newSummary.getIdValue(), lastConfirmed.getIdValue(), UUID.randomUUID()));
+            eventPublisher.publishEvent(
+                new SummaryCreated(newSummary.getIdValue(), lastConfirmed.getIdValue(), UUID.randomUUID()));
 
             return newSummary;
         }
@@ -62,19 +52,11 @@ class CreateNewSummaryUseCase implements UseCase<Summary> {
             .userId(userId)
             .date(LocalDateTime.now())
             .state(SummaryState.DRAFT)
-            .assets(new ArrayList<>())
             .money(new Money(BigDecimal.ZERO.setScale(2, RoundingMode.HALF_UP)))
             .build());
 
         eventPublisher.publishEvent(new SummaryCreated(summarySaved.getIdValue(), null, UUID.randomUUID()));
         return summarySaved;
-    }
-
-    private static BigDecimal calculateMoneyValue(List<Asset> lastConfirmedAssets) {
-        return lastConfirmedAssets.stream()
-            .map(asset -> asset.getMoney().getMoneyValue())
-            .reduce(BigDecimal.ZERO, BigDecimal::add)
-            .setScale(2, RoundingMode.HALF_UP);
     }
 
     private void validatedIfThereAreNoDrafts() {
@@ -83,27 +65,5 @@ class CreateNewSummaryUseCase implements UseCase<Summary> {
         if (!summariesInDraft.isEmpty()) {
             throw new IllegalStateException("User can have only one summary in creation.");
         }
-    }
-
-    private static List<Asset> getNewAssets(List<Asset> lastConfirmedAssets) {
-        return lastConfirmedAssets.stream().map(a ->
-            new Asset(AssetId.random(),
-                a.getMoney(),
-                a.getName(),
-                getNewItemsForAsset(a),
-                a.getType(),
-                a.getSummaryId()
-            )
-        ).collect(Collectors.toList());
-    }
-
-    private static List<Item> getNewItemsForAsset(Asset a) {
-        if (a.getItems() == null) {
-            return List.of();
-        }
-        return a.getItems()
-            .stream()
-            .map(i -> new Item(ItemId.random(), i.getMoney(), i.getName(), i.getQuantity()))
-            .collect(Collectors.toList());
     }
 }
